# codestyle

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: errors.yml  release.yml  warnings.yml
.readme_assets/: description.md  installation.md  usage.md
src/: lib.rs  main.rs  test_fixture.rs
src/checks/: instrument.rs  loops.rs  mod.rs
src/rust_checks/: cargo_dep_ordering.rs  embed_simple_vars.rs  ignored_error_comment.rs  impl_folds.rs  impl_follows_type.rs  insta_snapshots.rs  instrument.rs  join_split_impls.rs  let_underscore_comment.rs  loops.rs  mod.rs  no_chrono.rs  no_tokio_spawn.rs  pub_first.rs  skip.rs  test_fn_prefix.rs  unwrap_or_comment.rs  use_bail.rs
tests/integration/: main.rs
tests/integration/rust/: cargo_dep_ordering.rs  ignored_error_comment.rs  impl_folds.rs  insta_snapshots.rs  instrument.rs  let_underscore_comment.rs  loops.rs  main.rs  pub_first.rs  skip_attribute.rs  test_fn_prefix.rs  unwrap_or_comment.rs  use_bail.rs  utils.rs
tests/integration/rust/impl_blocks/: impl_follows_type.rs  join_split_impls.rs  mod.rs
tests/rust/: README.md  embed_simple_vars.rs  impl_follows_type.rs  insta_snapshots.rs  instrument.rs  join_split_impls.rs  loops.rs  main.rs  no_chrono.rs  no_tokio_spawn.rs  test_fn_prefix.rs  use_bail.rs  utils.rs
