cargo-features = ["codegen-backend"]
[package]
name = "codestyle"
version = "0.2.23"
edition = "2024"
authors = ["Valeriy Sakharov <valeratrades@gmail.com>"]
description = "A code style checker and formatter for Rust"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/codestyle"
keywords = ["codestyle", "linter", "formatter", "style"]
categories = ["development-tools"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
clap = { version = "^4.5.4", features = ["derive"] }
color-eyre = "^0.6.3"
derive-new = "^0"
miette = { version = "^7", features = ["fancy"] }
proc-macro2 = { version = "^1", features = ["span-locations"] }
quote = "^1"
smart-default = "^0.7"
syn = { version = "^2", features = ["full", "parsing", "extra-traits", "visit"] }
tempfile = "^3"
v_utils = { version = "^2.15.19", features = ["io", "macros", "cli", "xdg"] }
walkdir = "^2"

[dev-dependencies]
insta = "^1"
trybuild = "^1"
v_fixtures = "^0.3"

[[test]]
name = "rust"
path = "tests/integration/rust/main.rs"

[lints.clippy]
# Stable
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
# const fns, so actually more performant
get_first = "allow"
get_last_with_len = "allow"
